minor temp fix on mobile view

--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -1,7 +1,7 @@
 html, body {
   height:100%;
-  padding: 0px;
-  margin: 0px 0px 0px 1px;
+  padding: 0px 2px;
+  margin: 10px 0px 0px 0px;
 }
 
 @font-face {
@@ -103,17 +103,17 @@ a:hover {
 
 @media screen and (max-width: 1130px) {
     body {
-        background-size: 50% auto, 100%;
+        /*background-size: 50% auto, 100%;
         background-color: #0d426b;
-        background-position: bottom left;
+        background-position: bottom left;*/
     }
 }
 
 @media screen and (width: 1366px) and (height: 1024px) {
     body {
-        background-size: 50% auto, 100%;
+        /*background-size: 50% auto, 100%;
         background-color: #0d426b;
-        background-position: bottom left;
+        background-position: bottom left;*/
     }
 }
 @media screen and (height: 1366px) and (width: 1024px) {
@@ -136,7 +136,7 @@ a:hover {
 
 @media screen and (max-width: 600px) {
   body {
-    background-position: bottom center;
+    /*background-position: bottom center;*/
   }
   #dialog {
     position: relative;
@@ -144,9 +144,13 @@ a:hover {
   }
 }
 
-@media screen and (max-width: 400px) {
-  #p1 {
-    display: none;
+@media screen and (max-width: 430px) {
+  #i {
+    /*display: none;*/
+    margin-top: 30px;
+  }
+  #p2 {
+    margin-top: 60%;
   }
 }
 
@@ -158,7 +162,7 @@ a:hover {
 
 @media screen and (max-height: 535px) {
   #p1 {
-    display: none;
+    /*display: none;*/
   }
 }
 
@@ -171,11 +175,14 @@ a:hover {
   }
 }
 
-@media screen and (width: 568px) and (height: 320px) {
+@media screen and (height: 568px) and (width: 320px) {
   body {
-    background-position: right;
+    /*background-position: right;*/
+  }
+  #p1 {
+    display: none;
   }
   #p2 {
-    width: 60%
+    margin-top: 30px;
   }
 }
